# wazobia-embed

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  training.ipynb
pipeline/: constants.py  ollama_audit.py  run_ollama.sh  text_utils.py
pipeline/audit/: ollama_audit.py  run_ollama.sh
pipeline/data/: constants.py  enums.py  eval_test_data.py  nontrain_data.py  postprocess.py  run.py  train_data.py  translate.py  utils.py  wura.py
pipeline/datasets/: datasets.py  run_datasets.py  utils.py
pipeline/llms/: ollama_audit.py  ollama_translation.py  run_ollama.sh
tests/: test_drive_ids.py
