[project]
name = "omotoso-abdulmatin4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "flagembedding[finetune]>=1.3.4",
    "gdown>=5.2.0",
    "html2text>=2025.4.15",
    "ipykernel>=6.29.5",
    "jsonlines>=4.0.0",
    "llama-index==0.10.1",
    "setuptools>=78.1.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
