[project]
name = "wazobia-embed"
version = "0.1.0"
description = "The code behind the Improving BGE-M3 Multilingual Dense Embeddings for Nigerian Low Resource Languages paper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flagembedding>=1.3.5",
    "torch>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=9.6.0",
    "pytest>=8.3.5",
]
training = [

]
pipeline = [
    "torch>=2.8.0",
    "datasets>=3.5.1",
    "gdown>=5.2.0",
    "jsonlines>=4.0.0",
    "numpy>=2.2.4",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tiktoken>=0.9.0"
]
