[project]
name = "wazobia-embed"
version = "0.1.0"
description = "The code behind the Improving BGE-M3 Multilingual Dense Embeddings for Nigerian Low Resource Languages paper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flagembedding>=1.3.5",
    "gdown>=5.2.0",
    "torch>=2.8.0",
    "deepspeed>=0.17.6",
]

[project.optional-dependencies]
dev = [
    "ipython>=9.6.0",
    "pytest>=8.3.5",
]
pipeline = [
    "jsonlines>=4.0.0",
    "ollama>=0.4.8",
    "tiktoken>=0.9.0"
]
